Speichern des Video-Pfades in den Application-Settings

--- a/source/LED-Banden-Demo/app.config
+++ b/source/LED-Banden-Demo/app.config
@@ -59,6 +59,9 @@
             <setting name="Bande5Left" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="videoPfad" serializeAs="String">
+                <value />
+            </setting>
         </LED_Banden_Demo.My.MySettings>
     </userSettings>
 </configuration>
