--- a/source/LED-Banden-Demo/My Project/Settings.settings
+++ b/source/LED-Banden-Demo/My Project/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="Bande5Left" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="videoPfad" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
