Breite und Höhe der Darstellungsflächen werden in den Application Settings gespeichert.
Signed-off-by: L5 <mail@line5.tv>

--- a/source/LED-Banden-Demo/app.config
+++ b/source/LED-Banden-Demo/app.config
@@ -62,6 +62,36 @@
             <setting name="videoPfad" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Bande1Width" serializeAs="String">
+                <value>768</value>
+            </setting>
+            <setting name="Bande1Height" serializeAs="String">
+                <value>72</value>
+            </setting>
+            <setting name="Bande2Width" serializeAs="String">
+                <value>768</value>
+            </setting>
+            <setting name="Bande2Height" serializeAs="String">
+                <value>72</value>
+            </setting>
+            <setting name="Bande3Width" serializeAs="String">
+                <value>768</value>
+            </setting>
+            <setting name="Bande3Height" serializeAs="String">
+                <value>72</value>
+            </setting>
+            <setting name="Bande4Width" serializeAs="String">
+                <value>768</value>
+            </setting>
+            <setting name="Bande4Height" serializeAs="String">
+                <value>72</value>
+            </setting>
+            <setting name="Bande5Width" serializeAs="String">
+                <value>768</value>
+            </setting>
+            <setting name="Bande5Height" serializeAs="String">
+                <value>72</value>
+            </setting>
         </LED_Banden_Demo.My.MySettings>
     </userSettings>
 </configuration>
