--- a/source/LED-Banden-Demo/My Project/Settings.settings
+++ b/source/LED-Banden-Demo/My Project/Settings.settings
@@ -35,5 +35,35 @@
     <Setting Name="videoPfad" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Bande1Width" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">768</Value>
+    </Setting>
+    <Setting Name="Bande1Height" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">72</Value>
+    </Setting>
+    <Setting Name="Bande2Width" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">768</Value>
+    </Setting>
+    <Setting Name="Bande2Height" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">72</Value>
+    </Setting>
+    <Setting Name="Bande3Width" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">768</Value>
+    </Setting>
+    <Setting Name="Bande3Height" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">72</Value>
+    </Setting>
+    <Setting Name="Bande4Width" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">768</Value>
+    </Setting>
+    <Setting Name="Bande4Height" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">72</Value>
+    </Setting>
+    <Setting Name="Bande5Width" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">768</Value>
+    </Setting>
+    <Setting Name="Bande5Height" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">72</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
