Overlap und Video-Positionen werden jetzt immer in Abhaengigkeit von den gerade ausgewaehlten Darstellungsflaechen angezeigt. Linebreak und Overlap werden in den Application.settings gespeichert.
Signed-off-by: L5 <mail@line5.tv>

--- a/source/LED-Banden-Demo/app.config
+++ b/source/LED-Banden-Demo/app.config
@@ -92,6 +92,36 @@
             <setting name="Bande5Height" serializeAs="String">
                 <value>72</value>
             </setting>
+            <setting name="Bande1Linebreak" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande1Overlap" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande2Linebreak" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande2Overlap" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande3Linebreak" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande3Overlap" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande4Linebreak" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande4Overlap" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande5Linebreak" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande5Overlap" serializeAs="String">
+                <value>0</value>
+            </setting>
         </LED_Banden_Demo.My.MySettings>
     </userSettings>
 </configuration>
