Offset-Funktionen zu LED-Banden hinzugefügt
Signed-off-by: L5 <mail@line5.tv>

--- a/source/LED-Banden-Demo/My Project/Settings.settings
+++ b/source/LED-Banden-Demo/My Project/Settings.settings
@@ -95,5 +95,20 @@
     <Setting Name="Bande5Overlap" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Bande1Offset" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Bande2Offset" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Bande3Offset" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Bande4Offset" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Bande5Offset" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
