--- a/source/LED-Banden-Demo/app.config
+++ b/source/LED-Banden-Demo/app.config
@@ -122,6 +122,21 @@
             <setting name="Bande5Overlap" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="Bande1Offset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande2Offset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande3Offset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande4Offset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Bande5Offset" serializeAs="String">
+                <value>0</value>
+            </setting>
         </LED_Banden_Demo.My.MySettings>
     </userSettings>
 </configuration>
